# UniversalDocProcessing

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  __init__.py  coverage.xml  env.example  main.py  pyproject.toml  requirements.minimal.txt  requirements.txt  setup.bat  setup.py  start.py  test_receipt.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  quality-gate.yml  release.yml
app/: config.py  enums.py  main.py  models.py  schemas.py
app/adapters/: llm_extractor.py  ocr_provider.py
app/adapters/external_apis/: base.py  example_vendor.py
app/routers/: fetch.py  finalize.py  hil.py  ingest.py  reconcile.py  reports.py
app/services/: audit.py  extraction.py  fetch_service.py  finalize_service.py  hil_service.py  queue.py  reconcile_service.py
app/utils/: diff.py  validation.py
config/: .env.example  .pre-commit-config.yaml  env.example  requirements-crewai.txt
datasets/: sample_invoices.json  sample_purchase_orders.json  sample_receipts.json
demo_web/: main.py  models.py
demo_web/templates/: home.html  invoices_list.html  invoices_new.html  invoices_upload.html  loads_list.html  loads_new.html  receipts_list.html  receipts_new.html  receipts_upload.html  universal_batch_result.html  universal_result.html  universal_upload.html
der_pipeline/: README.md  alembic.ini  celery_app.py  pyproject.toml  requirements.txt  start.py  tasks.py  test_api.py  test_crew.py
der_pipeline/alembic/: env.py
der_pipeline/app/: __init__.py  auth.py  config.py  db.py  enums.py  main.py  models.py  schemas.py
der_pipeline/app/adapters/: llm_extractor.py  ocr.py  ocr_provider.py
der_pipeline/app/adapters/external_apis/: __init__.py  base.py  example_vendor.py
der_pipeline/app/agents/: __init__.py  crew_manager.py  document_extraction_agent.py  reconciliation_agent.py  validation_agent.py
der_pipeline/app/routers/: __init__.py  ai_health.py  auth.py  config.py  debug.py  document_types.py  fetch.py  finalize.py  hil.py  ingest.py  rag.py  reconcile.py  reports.py
der_pipeline/app/services/: audit.py  crewai_service.py  debug_service.py  extraction.py  fetch_service.py  finalize_service.py  hil_service.py  queue.py  rag_service.py  reconcile_service.py
der_pipeline/app/services/connectors/: __init__.py  accounting_api.py  dummy_json.py  rest_endpoint.py  sql_query.py
der_pipeline/app/utils/: diff.py  validation.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  environment_variables.md  frontend_example.md
document_processing/: __init__.py  agents.py  config.py  doc_classifier.py  doc_extractor.py  pipeline.py
document_processing/config/: doc_types.json  doc_types.yaml
mcp/: client.py
sdk/: __init__.py  client.py
service/: __init__.py  api.py
test_web_app/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  start.js
test_web_app/public/: index.html
test_web_app/src/: App.js  index.css
test_web_app/src/components/: DebugPanel.js  Navbar.js  PipelineStatus.js  RagManager.js
test_web_app/src/pages/: Dashboard.js  DocumentDetail.js  DocumentUpload.js  RagManager.js  RagUpload.js  Settings.js  SystemHealth.js
test_web_app/src/services/: api.js
tests/: conftest.py  test_agents.py  test_api.py  test_api_contract.py  test_classifier.py  test_extractor.py  test_happy_path.py  test_mcp.py  test_performance.py  test_pipeline.py  test_reconcile_strategies.py  test_sdk.py
web/hil_ui/: app.js  index.html
