[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "universal-doc-processing"
version = "0.1.0"
description = "Universal Document Processing Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.0",
    "openai>=1.40.0",
    "tiktoken>=0.5.0",
    "rapidfuzz>=3.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "qdrant-client>=1.6.0",
    "faiss-cpu>=1.7.4",
    "slowapi>=0.1.9",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "fakeredis>=2.20.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"