[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-doc-processing"
version = "1.0.0"
description = "5-Step Data Entry & Reconciliation Pipeline for Document Processing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "UniversalDocProcessing Team", email = "team@example.com"}
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.0",
    "sqlmodel>=0.0.8",
    "httpx>=0.25",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.8"
]

[project.urls]
Homepage = "https://github.com/Thepizzapie/UniversalDocProcessing"
Repository = "https://github.com/Thepizzapie/UniversalDocProcessing"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # flake8
    "I",           # isort
    "N",           # pep8-naming
    "UP",          # pyupgrade
]
ignore = [
    "UP007", # Allow X | Y union syntax
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config"
]